--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.0",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
     "ngx-mat-datetime-picker": "^2.0.3",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
