--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
     "ngx-mat-datetime-picker": "^2.0.3",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
