--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "time-sheet",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,22 +21,27 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@sweetalert2/ngx-sweetalert2": "^8.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "bootstrap": "^4.4.1",
+    "firebase-tools": "^8.0.2",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
     "ngx-mat-datetime-picker": "^2.0.3",
-    "ngx-spinner": "^9.0.2",
+    "ngx-material-timepicker": "^5.4.3",
+    "ngx-spinner": "^8.1.0",
     "rxjs": "~6.4.0",
-    "sweetalert2": "^9.10.12",
+    "sweetalert2": "^9.10.13",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
-    "@angular/cli": "^8.3.23",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "~8.3.23",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
