--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -23,17 +23,20 @@
     "@angular/router": "~8.2.14",
     "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "firebase-tools": "^8.0.2",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "ng-pick-datetime": "^7.0.0",
     "ng-pick-datetime-moment": "^1.0.8",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-mat-datetime-picker": "^2.0.3",
     "ngx-material-timepicker": "^5.4.3",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.4.0",
-    "sweetalert2": "^9.10.13",
+    "sweetalert2": "^9.14.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
