--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
@@ -31,7 +32,7 @@
     "ng-pick-datetime-moment": "^1.0.8",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-datetime-picker": "^2.0.3",
-    "ngx-material-timepicker": "^5.4.3",
+    "ngx-material-timepicker": "^5.5.3",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.14.0",
