--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -18,15 +18,19 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^9.2.4",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@sweetalert2/ngx-sweetalert2": "^7.3.0",
+    "@types/jquery": "^3.3.38",
     "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
     "firebase-tools": "^8.0.2",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.26.0",
     "ng-pick-datetime": "^7.0.0",
     "ng-pick-datetime-moment": "^1.0.8",
     "ngx-bootstrap": "^5.6.1",
