--- a/TimeSheet-Web/package.json
+++ b/TimeSheet-Web/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@material/elevation": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@sweetalert2/ngx-sweetalert2": "^7.3.0",
     "@types/jquery": "^3.3.38",
